fix: fix support for multiple shadow vars